--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       { file: 'image/MMH_Eugene Cotter.png', name: 'Eugene Cotter', alt: 'Photo of Eugene Cotter' },
       { file: 'image/MMH_Edward Burke.png', name: 'Edward Burke', alt: 'Photo of Edward Burke' },
       { file: 'image/MMH_John Corcoran.png', name: 'John Corcoran', alt: 'Photo of John Corcoran' },
-      { file: 'image/MMH_Máire Rhatigan.png', name: 'Máire Rhatigan', alt: 'Photo of Máire Rhatigan' },
+      { file: 'image/MMH_Maire Rhatigan.png', name: 'Máire Rhatigan', alt: 'Photo of Máire Rhatigan' },
       { file: 'image/MMH_John Doddy.png', name: 'John Doddy', alt: 'Photo of John Doddy' },
       { file: 'image/MMH_Kieran Foley.png', name: 'Kieran Foley', alt: 'Photo of Kieran Foley' },
       { file: 'image/MMH_William Gaine.png', name: 'William Gaine', alt: 'Photo of William Gaine' },
@@ -125,7 +125,7 @@
       { file: 'image/MMH_Brian Hendley.png', name: 'Brian Hendley', alt: 'Photo of Brian Hendley' },
       { file: 'image/MMH_Regina McQuillan.png', name: 'Regina McQuillan', alt: 'Photo of Regina McQuillan' },
       { file: 'image/MMH_Philip Murphy.png', name: 'Philip Murphy', alt: 'Photo of Philip Murphy' },
-      { file: 'image/MMH_Fionnula Ní Ghrainne.png', name: 'Fionnula Ní Ghrainne', alt: 'Photo of Fionnula Ní Ghrainne' },
+      { file: 'image/MMH_Fionnula Ni Ghrainne.png', name: 'Fionnula Ní Ghrainne', alt: 'Photo of Fionnula Ní Ghrainne' },
       { file: 'image/MMH_Desmond O’Duffy.png', name: 'Desmond O’Duffy', alt: 'Photo of Desmond O’Duffy' },
       { file: 'image/MMH_Brendan Morrissey.png', name: 'Brendan Morrissey', alt: 'Photo of Brendan Morrissey' },
       { file: 'image/MMH_Helen Mullan.png', name: 'Helen Mullan', alt: 'Photo of Helen Mullan' },
@@ -133,7 +133,7 @@
       { file: 'image/MMH_Victor O’Loughlin.png', name: 'Victor O’Loughlin', alt: 'Photo of Victor O’Loughlin' },
       { file: 'image/MMH_Mary Merry.png', name: 'Mary Merry', alt: 'Photo of Mary Merry' },
       { file: 'image/MMH_Shane Meehan.png', name: 'Shane Meehan', alt: 'Photo of Shane Meehan' },
-      { file: 'image/MMH_Eibhlín Ní Choinghealtaigh.png', name: 'Eibhlín Ní Choinghealtaigh', alt: 'Photo of Eibhlín Ní Choinghealtaigh' },
+      { file: 'image/MMH_Eibhlin Ni Choinghealtaigh.png', name: 'Eibhlín Ní Choinghealtaigh', alt: 'Photo of Eibhlín Ní Choinghealtaigh' },
       { file: 'image/MMH_Mary O’Brien.png', name: 'Mary O’Brien', alt: 'Photo of Mary O’Brien' },
       { file: 'image/MMH_Conor Farren.png', name: 'Conor Farren', alt: 'Photo of Conor Farren' },
       { file: 'image/MMH_Martin O’Donnell.png', name: 'Martin O’Donnell', alt: 'Photo of Martin O’Donnell' },
