--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dad’s Medical Class – Gallery</title>
-  <meta name="description" content="Static photo gallery of a medical class. One hero image plus a 5-column grid of portraits with captions. Works on GitHub Pages.">
+  <title>Mater Misericordiae University Hospital</title>
+  <meta name="description" content="Class of 1983">
 
   <style>
     :root{
