--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 </head>
 <body>
   <header>
-    <h1>Dad’s Medical Class</h1>
-    <p>“Full class” image at the top, then a permanent 5-column grid of portraits. Click any image to view and zoom; use ←/→ to navigate; Esc to close.</p>
+    <h1>Mater Misericordiae University Hospital - Class of '83</h1>
+    <p>“Click any image to view and zoom; use ←/→ to navigate; Esc to close.</p>
   </header>
 
   <div class="wrap">
