--- a/index.html
+++ b/index.html
@@ -115,11 +115,63 @@ figure.card img,
 
     // ===== Portraits (simplified file names for repo) =====
     const PORTRAITS = [
-      { file: 'MMH_John Barry.png', name: 'John Barry', alt: 'Photo of John Barry' },
-      { file: 'MMH_Mary Cosgrave.png', name: 'Mary Cosgrave', alt: 'Photo of Mary Cosgrave' },
-      // ... (keep your full list here)
-      { file: 'MMH_David Tangney.png', name: 'David Tangney', alt: 'Photo of David Tangney' }
-    ];
+  { file: 'image/MMH_John Barry.png', name: 'John Barry', alt: 'Photo of John Barry' },
+  { file: 'image/MMH_Mary Cosgrave.png', name: 'Mary Cosgrave', alt: 'Photo of Mary Cosgrave' },
+  { file: 'image/MMH_Eugene Cotter.png', name: 'Eugene Cotter', alt: 'Photo of Eugene Cotter' },
+  { file: 'image/MMH_Edward Burke.png', name: 'Edward Burke', alt: 'Photo of Edward Burke' },
+  { file: 'image/MMH_John Corcoran.png', name: 'John Corcoran', alt: 'Photo of John Corcoran' },
+  { file: 'image/MMH_Maire Rhatigan.png', name: 'Máire Rhatigan', alt: 'Photo of Máire Rhatigan' },
+  { file: 'image/MMH_John Doddy.png', name: 'John Doddy', alt: 'Photo of John Doddy' },
+  { file: 'image/MMH_Kieran Foley.png', name: 'Kieran Foley', alt: 'Photo of Kieran Foley' },
+  { file: 'image/MMH_William Gaine.png', name: 'William Gaine', alt: 'Photo of William Gaine' },
+  { file: 'image/MMH_Jacinta McCann.png', name: 'Jacinta McCann', alt: 'Photo of Jacinta McCann' },
+  { file: 'image/MMH_Teresa Coll.png', name: 'Teresa Coll', alt: 'Photo of Teresa Coll' },
+  { file: 'image/MMH_Kieran Bourke.png', name: 'Kieran Bourke', alt: 'Photo of Kieran Bourke' },
+  { file: 'image/MMH_Niall Colwell.png', name: 'Niall Colwell', alt: 'Photo of Niall Colwell' },
+  { file: 'image/MMH_Rita Cassidy.png', name: 'Rita Cassidy', alt: 'Photo of Rita Cassidy' },
+  { file: 'image/MMH_Paul Deegan.png', name: 'Paul Deegan', alt: 'Photo of Paul Deegan' },
+  { file: 'image/MMH_Mary Cumiskey.png', name: 'Mary Cumiskey', alt: 'Photo of Mary Cumiskey' },
+  { file: 'image/MMH_Pauline Gallagher.png', name: 'Pauline Gallagher', alt: 'Photo of Pauline Gallagher' },
+  { file: 'image/MMH_Pasqueline Lyng.png', name: 'Pasqueline Lyng', alt: 'Photo of Pasqueline Lyng' },
+  { file: 'image/MMH_Michelle McCormack.png', name: 'Michelle McCormack', alt: 'Photo of Michelle McCormack' },
+  { file: 'image/MMH_James Keely.png', name: 'James Keely', alt: 'Photo of James Keely' },
+  { file: 'image/MMH_Fergal Hickey.png', name: 'Fergal Hickey', alt: 'Photo of Fergal Hickey' },
+  { file: 'image/MMH_Peter Moran.png', name: 'Peter Moran', alt: 'Photo of Peter Moran' },
+  { file: 'image/MMH_Damian McCormack.png', name: 'Damian McCormack', alt: 'Photo of Damian McCormack' },
+  { file: 'image/MMH_Jacqueline McElhinney.png', name: 'Jacqueline McElhinney', alt: 'Photo of Jacqueline McElhinney' },
+  { file: 'image/MMH_Edel McGinnity.png', name: 'Edel McGinnity', alt: 'Photo of Edel McGinnity' },
+  { file: 'image/MMH_John Tyndall.png', name: 'John Tyndall', alt: 'Photo of John Tyndall' },
+  { file: 'image/MMH_William Grogan.png', name: 'William Grogan', alt: 'Photo of William Grogan' },
+  { file: 'image/MMH_Maeve McKeogh.png', name: 'Maeve McKeogh', alt: 'Photo of Maeve McKeogh' },
+  { file: 'image/MMH_Edward Keelan.png', name: 'Edward Keelan', alt: 'Photo of Edward Keelan' },
+  { file: 'image/MMH_Derval Igoe.png', name: 'Derval Igoe', alt: 'Photo of Derval Igoe' },
+  { file: 'image/MMH_Kieran Morris.png', name: 'Kieran Morris', alt: 'Photo of Kieran Morris' },
+  { file: 'image/MMH_Brigid McCann.png', name: 'Brigid McCann', alt: 'Photo of Brigid McCann' },
+  { file: 'image/MMH_Christopher McTiernan.png', name: 'Christopher McTiernan', alt: 'Photo of Christopher McTiernan' },
+  { file: 'image/MMH_David Walshe.png', name: 'David Walshe', alt: 'Photo of David Walshe' },
+  { file: 'image/MMH_Brian Hendley.png', name: 'Brian Hendley', alt: 'Photo of Brian Hendley' },
+  { file: 'image/MMH_Regina McQuillan.png', name: 'Regina McQuillan', alt: 'Photo of Regina McQuillan' },
+  { file: 'image/MMH_Philip Murphy.png', name: 'Philip Murphy', alt: 'Photo of Philip Murphy' },
+  { file: 'image/MMH_Fionnula Ni Ghrainne.png', name: 'Fionnula Ní Ghrainne', alt: 'Photo of Fionnula Ní Ghrainne' },
+  { file: 'image/MMH_Desmond O’Duffy.png', name: 'Desmond O’Duffy', alt: 'Photo of Desmond O’Duffy' },
+  { file: 'image/MMH_Brendan Morrissey.png', name: 'Brendan Morrissey', alt: 'Photo of Brendan Morrissey' },
+  { file: 'image/MMH_Helen Mullan.png', name: 'Helen Mullan', alt: 'Photo of Helen Mullan' },
+  { file: 'image/MMH_John Mulroy.png', name: 'John Mulroy', alt: 'Photo of John Mulroy' },
+  { file: 'image/MMH_Victor O’Loughlin.png', name: 'Victor O’Loughlin', alt: 'Photo of Victor O’Loughlin' },
+  { file: 'image/MMH_Mary Merry.png', name: 'Mary Merry', alt: 'Photo of Mary Merry' },
+  { file: 'image/MMH_Shane Meehan.png', name: 'Shane Meehan', alt: 'Photo of Shane Meehan' },
+  { file: 'image/MMH_Eibhlin Ni Choinghealtaigh.png', name: 'Eibhlín Ní Choinghealtaigh', alt: 'Photo of Eibhlín Ní Choinghealtaigh' },
+  { file: 'image/MMH_Mary O’Brien.png', name: 'Mary O’Brien', alt: 'Photo of Mary O’Brien' },
+  { file: 'image/MMH_Conor Farren.png', name: 'Conor Farren', alt: 'Photo of Conor Farren' },
+  { file: 'image/MMH_Martin O’Donnell.png', name: 'Martin O’Donnell', alt: 'Photo of Martin O’Donnell' },
+  { file: 'image/MMH_Brona O’Neill.png', name: 'Brona O’Neill', alt: 'Photo of Brona O’Neill' },
+  { file: 'image/MMH_Terence Taylor.png', name: 'Terence Taylor', alt: 'Photo of Terence Taylor' },
+  { file: 'image/MMH_Lillian Murnane.png', name: 'Lillian Murnane', alt: 'Photo of Lillian Murnane' },
+  { file: 'image/MMH_Joan Ryan.png', name: 'Joan Ryan', alt: 'Photo of Joan Ryan' },
+  { file: 'image/MMH_Vincent Parsons.png', name: 'Vincent Parsons', alt: 'Photo of Vincent Parsons' },
+  { file: 'image/MMH_David Tangney.png', name: 'David Tangney', alt: 'Photo of David Tangney' }
+];
+
 
     // ===== Helpers =====
     function normaliseFile(file) {
